[project]
name = "econkit"
version = "0.1.0"
description = "A symbolic and numeric economics toolkit for economists"
authors = [{ name = "Anthony Sung", email = "sungpinyue@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0"
keywords = [
    "economics",
    "sympy",
    "microeconomics",
    "macroeconomics",
    "game-theory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["sympy>=1.13", "numpy>=2.0", "scipy>=1.14", "matplotlib>=3.9"]

[project.optional-dependencies]
data = ["pandas>=2.2", "requests>=2.32"]
notebook = ["jupyterlab>=4.0", "ipywidgets>=8.0"]
all = ["pandas>=2.2", "requests>=2.32", "jupyterlab>=4.0", "ipywidgets>=8.0"]

# [project.urls]
# Homepage = "https://github.com/anthonysung/econkit"
# Repository = "https://github.com/anthonysung/econkit"
# Issues = "https://github.com/anthonysung/econkit/issues"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=5.0"
ruff = ">=0.6"
mypy = ">=1.11"
jupyterlab = ">=4.0"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["econkit"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=econkit --cov-report=term-missing -v"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
